syntax = "proto3";

package zelvy.goal;
option go_package = "github.com/rangodisco/zelvy/gen/zelvy/goal";

message GetSummaryGoalResponse {
  string name = 1;
  double value = 2;
  string display_value = 3;
  double threshold = 4;
  string display_threshold = 5;
  bool isSuccessful = 6;
  bool isOff = 7;
  int64 progression = 8;
  string picto = 9;
}